objects/sf42_Project__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsUniversalID__c</fullName>
        <externalId>true</externalId>
        <label>IsUniversalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Billing_Country__c</fullName>
        <label>Account Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Business_Unit__c</fullName>
        <description>Field used for Devices sharing rules</description>
        <label>Account Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Account__c</fullName>
        <formula>ptt_Agent_Project_Manager__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Email__c</fullName>
        <formula>ptt_Agent_Project_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Mobile_Phone__c</fullName>
        <formula>ptt_Agent_Project_Manager__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Phone__c</fullName>
        <formula>ptt_Agent_Project_Manager__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Manager)</relationshipLabel>
        <relationshipName>Projects_Agent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Application__c</fullName>
        <description>The same values as on Service&amp;Demo object.</description>
        <inlineHelpText>Specifies the machine/application of the online monitoring system or NDT solution.</inlineHelpText>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ball mill drive</fullName>
                </value>
                <value>
                    <fullName>centrifuge</fullName>
                </value>
                <value>
                    <fullName>cogeneration turbine</fullName>
                </value>
                <value>
                    <fullName>cold rolling mill</fullName>
                </value>
                <value>
                    <fullName>combustion motor</fullName>
                </value>
                <value>
                    <fullName>compressor</fullName>
                </value>
                <value>
                    <fullName>conveyor</fullName>
                </value>
                <value>
                    <fullName>crane drive</fullName>
                </value>
                <value>
                    <fullName>electric motor</fullName>
                </value>
                <value>
                    <fullName>escalator drive</fullName>
                </value>
                <value>
                    <fullName>extruder</fullName>
                </value>
                <value>
                    <fullName>gas turbine</fullName>
                </value>
                <value>
                    <fullName>gearbox</fullName>
                </value>
                <value>
                    <fullName>generator</fullName>
                </value>
                <value>
                    <fullName>hot rolling mill</fullName>
                </value>
                <value>
                    <fullName>hydraulic pump</fullName>
                </value>
                <value>
                    <fullName>hydro turbine</fullName>
                </value>
                <value>
                    <fullName>ID fan</fullName>
                </value>
                <value>
                    <fullName>machine tool</fullName>
                </value>
                <value>
                    <fullName>mixer</fullName>
                </value>
                <value>
                    <fullName>paper machine</fullName>
                </value>
                <value>
                    <fullName>press</fullName>
                </value>
                <value>
                    <fullName>printing machine</fullName>
                </value>
                <value>
                    <fullName>process fan</fullName>
                </value>
                <value>
                    <fullName>pump</fullName>
                </value>
                <value>
                    <fullName>reciprocating compressor</fullName>
                </value>
                <value>
                    <fullName>refiner</fullName>
                </value>
                <value>
                    <fullName>robot drive</fullName>
                </value>
                <value>
                    <fullName>screw compressor</fullName>
                </value>
                <value>
                    <fullName>steam turbine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Costs__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ptt_Link_to_external_data_server__c</fullName>
        <label>Link to external data server</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ptt_Opportunity_Owner__c</fullName>
        <formula>ptt_Opportunity__r.Owner.Full_Name_for_filters__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Order_Processing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Processing</label>
        <referenceTo>Order_Processing__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Project_Stage__c</fullName>
        <label>Project Stag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Commissioning</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Create Invoice</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_Company_Address__c</fullName>
        <formula>sf42_de_Account__r.BillingStreet &amp;&quot;, &quot;&amp;  sf42_de_Account__r.BillingPostalCode &amp;&quot; &quot;&amp; sf42_de_Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Deputy_Project_Manager_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deputy Project Manager (External)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Deputy Project Manager (External))</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_Deputy_Project_Manager_Internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deputy Project Manager (Internal)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_EMail_D_PM__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_Internal__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_E_Mai_PMl__c</fullName>
        <formula>sf42_de_Project_Manager_Internal__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_E_Mail_PME_D__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_External__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_E_Mail_PME__c</fullName>
        <formula>sf42_de_Project_Manager_External__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Fax_A__c</fullName>
        <formula>sf42_de_Account__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Fax_D_PM__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_Internal__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Fax_PME_D__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_External__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Fax_PME__c</fullName>
        <formula>sf42_de_Project_Manager_External__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Fax_PM__c</fullName>
        <formula>sf42_de_Project_Manager_Internal__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Mobil_D_PM__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_Internal__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Mobil_PME_D__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_External__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Mobil_PME__c</fullName>
        <formula>sf42_de_Project_Manager_External__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Mobil_PM__c</fullName>
        <formula>sf42_de_Project_Manager_Internal__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Notes_Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Notes Migration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Phone_A__c</fullName>
        <formula>sf42_de_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Phone_D_PM__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_Internal__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Phone_PME_D__c</fullName>
        <formula>sf42_de_Deputy_Project_Manager_External__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Phone_PME__c</fullName>
        <formula>sf42_de_Project_Manager_External__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Phone_PM__c</fullName>
        <formula>sf42_de_Project_Manager_Internal__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_End__c</fullName>
        <label>Project End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_Manager_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager (External)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Manager (External))</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_Manager_Internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager (Internal)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_Number__c</fullName>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_Start__c</fullName>
        <label>Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Balancing</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Commissioning</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Remote Mentoring</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>SQL Installation/Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>TTS</fullName>
                </value>
                <value>
                    <fullName>VIB Trouble Shooting</fullName>
                </value>
                <value>
                    <fullName>Projektierung</fullName>
                </value>
                <value>
                    <fullName>Rabattvereinbarung</fullName>
                </value>
                <value>
                    <fullName>Wiederverkäufer</fullName>
                </value>
                <value>
                    <fullName>Rabattregelung</fullName>
                </value>
                <value>
                    <fullName>nicht realisiert</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>abgeschlossen</fullName>
                </value>
                <value>
                    <fullName>Angebotsphase</fullName>
                </value>
                <value>
                    <fullName>Teil-Auftrag</fullName>
                </value>
                <value>
                    <fullName>Angebot</fullName>
                </value>
                <value>
                    <fullName>Auftrag</fullName>
                </value>
                <value>
                    <fullName>Anfrage</fullName>
                </value>
                <value>
                    <fullName>Fortführung unter neuen Projektnummern</fullName>
                </value>
                <value>
                    <fullName>StartUP Service</fullName>
                </value>
                <value>
                    <fullName>IBN Termin vereinbart</fullName>
                </value>
                <value>
                    <fullName>erledigt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_REF__c</fullName>
        <label>REF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>sf42_de_Project_Number__c</columns>
        <columns>sf42_de_Project_Name__c</columns>
        <columns>sf42_de_Account__c</columns>
        <columns>sf42_de_Project_Status__c</columns>
        <columns>sf42_de_Project_Manager_Internal__c</columns>
        <columns>sf42_de_Project_Manager_External__c</columns>
        <columns>sf42_de_Project_Start__c</columns>
        <columns>sf42_de_Project_End__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NDT_Projekte</fullName>
        <columns>NAME</columns>
        <columns>sf42_de_Project_Name__c</columns>
        <columns>sf42_de_Project_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_gl_NDT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>sf42_de_Project_Status__c</field>
            <operation>equals</operation>
            <value>laufend</value>
        </filters>
        <label>NDT Projekte</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>GermanyNDTManagement</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_CM</fullName>
        <columns>NAME</columns>
        <columns>sf42_de_Project_Number__c</columns>
        <columns>sf42_de_Project_Name__c</columns>
        <columns>sf42_de_Project_Manager_Internal__c</columns>
        <columns>sf42_de_Project_Manager_External__c</columns>
        <columns>sf42_de_Project_Start__c</columns>
        <columns>sf42_de_Project_End__c</columns>
        <columns>sf42_de_Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_de_Account__c</field>
            <operation>equals</operation>
            <value>PT KK DEMO CM</value>
        </filters>
        <label>Projects CM</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Germany</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>P-{0}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>